[package]
name = "primer-core"
version = "0.2.0"
authors = ["Yujŏnja <hardboiled65@gmail.com>"]
description = "A base library collections for Application."
license = "MIT"
readme = "README.md"
repository = "https://github.com/orbitrc/primer"
keywords = ["rust"]
edition = "2018"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
seshat-unicode = "0.0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.4"

[dev-dependencies]
