[package]
name = "primer-core"
version = "0.5.0"
authors = ["Aspen Schneider <hardboiled65@gmail.com>"]
description = "A core library for Primer"
license = "MIT"
readme = "README.md"
repository = "https://github.com/orbitrc/primer"
keywords = ["rust"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[dependencies]
seshat-unicode = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"

[dev-dependencies]
